--- a/website/spreadmarket/src/App.css
+++ b/website/spreadmarket/src/App.css
@@ -9,6 +9,8 @@
 
 body {
   margin: 0;
+  width: 100%;
+  height: 100%;
   padding: 0;
   background-color: #66646b; 
   color: #e99c71; 
@@ -16,6 +18,7 @@ body {
 
 #root {
   max-width: none;
+  width: 100%;
   margin: 0 0;
   padding: 0;
   background: transparent;
@@ -25,6 +28,11 @@ body {
   height: 100vh;
 }
 
+.slackey-regular {
+  font-family: "Slackey", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 /* Navbar fixed to the top of the viewport */
 nav {
   position: fixed;
