--- a/website/spreadmarket/src/index.css
+++ b/website/spreadmarket/src/index.css
@@ -1,8 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  width: 100%;
+  height: 100%;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -23,6 +28,8 @@ a:hover {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   display: flex;
   place-items: center;
