--- a/website/spreadmarket/src/App.css
+++ b/website/spreadmarket/src/App.css
@@ -247,3 +247,24 @@ main {
     margin-left: auto;
   }
 }
+
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.smiley-toast-animation {
+  width: 300px;
+  height: 300px; 
+  border-radius: 10px;
+  position: relative;
+  animation: bounce 2s infinite;
+}
