--- a/website/spreadmarket/src/index.css
+++ b/website/spreadmarket/src/index.css
@@ -17,6 +17,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,
+body {
+  overflow: auto;
+}
 
 a {
   font-weight: 500;
